; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_ssl.c_flush_payload_buffer.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_ssl.c_flush_payload_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.key_state = type { i32, i32 }
%struct.buffer = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.key_state*)* @flush_payload_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @flush_payload_buffer(%struct.key_state* %0) #0 {
  %2 = alloca %struct.key_state*, align 8
  %3 = alloca %struct.buffer*, align 8
  store %struct.key_state* %0, %struct.key_state** %2, align 8
  br label %4

4:                                                ; preds = %10, %1
  %5 = load %struct.key_state*, %struct.key_state** %2, align 8
  %6 = getelementptr inbounds %struct.key_state, %struct.key_state* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call %struct.buffer* @buffer_list_peek(i32 %7)
  store %struct.buffer* %8, %struct.buffer** %3, align 8
  %9 = icmp ne %struct.buffer* %8, null
  br i1 %9, label %10, label %24

10:                                               ; preds = %4
  %11 = load %struct.key_state*, %struct.key_state** %2, align 8
  %12 = getelementptr inbounds %struct.key_state, %struct.key_state* %11, i32 0, i32 1
  %13 = load %struct.buffer*, %struct.buffer** %3, align 8
  %14 = getelementptr inbounds %struct.buffer, %struct.buffer* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.buffer*, %struct.buffer** %3, align 8
  %17 = getelementptr inbounds %struct.buffer, %struct.buffer* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @key_state_write_plaintext_const(i32* %12, i32 %15, i32 %18)
  %20 = load %struct.key_state*, %struct.key_state** %2, align 8
  %21 = getelementptr inbounds %struct.key_state, %struct.key_state* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @buffer_list_pop(i32 %22)
  br label %4

24:                                               ; preds = %4
  ret void
}

declare dso_local %struct.buffer* @buffer_list_peek(i32) #1

declare dso_local i32 @key_state_write_plaintext_const(i32*, i32, i32) #1

declare dso_local i32 @buffer_list_pop(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
